2007-11-16  Jim Evins  <evins@snaught.com>

	* libglabels/db.c:
	* libglabels/db.h:
		Added return codes to lgl_db_register_template().  Added lgl_db_does_template_exist()
		function.  Automatically create "User defined" category and add to all user
		registered templates.
	* libglabels/xml-template.c:
	* libglabels/xml-template.h:
		Return number of bytes written from lgl_xml_template_write_templates_to_file() and
		lgl_xml_template_write_template_to_file().
	* docs/libglabels/libglabels-decl-list.txt:
	* docs/libglabels/libglabels-sections.txt:
	* docs/libglabels/libglabels-undocumented.txt:
	* docs/libglabels/tmpl/db.sgml:
	* docs/libglabels/tmpl/xml-template.sgml:
		Update documentation to reflect above changes.

2007-10-28  Jim Evins  <evins@snaught.com>

	* libglabels/xml-template.c:
		Remove any leading white space from part #s when parsing old names.
	* src/mini-preview-pixbuf-cache.c:
		If name isn't in cache add it.

2007-10-26  Jim Evins  <evins@snaught.com>

	* libglabels/Makefile.am:
	* libglabels/category.c:
	* libglabels/category.h:
	* libglabels/db.c:
	* libglabels/db.h:
	* libglabels/libglabels-private.h:
	* libglabels/libglabels.h:
	* libglabels/paper.c:
	* libglabels/paper.h:
	* libglabels/template.c:
	* libglabels/template.h:
	* libglabels/xml-template.c:
		Another pass at screwing with the libglabels API.  Moved all
		database related stuff to db.[ch].
	* docs/libglabels/libglabels-decl-list.txt:
	* docs/libglabels/libglabels-docs.sgml:
	* docs/libglabels/libglabels-sections.txt:
	* docs/libglabels/libglabels-undocumented.txt:
	* docs/libglabels/tmpl/category.sgml:
	* docs/libglabels/tmpl/db.sgml:
	* docs/libglabels/tmpl/init.sgml:
	* docs/libglabels/tmpl/libglabels-unused.sgml:
	* docs/libglabels/tmpl/paper.sgml:
	* docs/libglabels/tmpl/template-construction.sgml:
	* docs/libglabels/tmpl/template-db.sgml:
	* docs/libglabels/tmpl/template-misc.sgml:
	* docs/libglabels/tmpl/template-struct.sgml:
	* docs/libglabels/tmpl/template.sgml: